<resources>
    <string name="app_name">Madmini</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rememberme">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="retypepassword">Retype Password</string>
    <string name="signin">Sign In</string>
    <string name="logout">Logout</string>
    <string name="title_activity_adminpa">Adminpa</string>
    <string name="changeprofile">Change Profile</string>
    <string name="deleteprofile">Delete Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="changepassowrd">Change password</string>
    <string name="confirmpassword">ConfirmPassowrd</string>

</resources>